# complete-machine-learning-and-data-science-bootcamp

./: pyproject.toml
data/: car_series.csv
notebooks/: 04_selecting_and_view_data_part2.ipynb  05_manipulating_data.ipynb
numpy_section/notebooks/: 01_intro.ipynb
pandas_section/notebooks/: 02_describe_data_with_pandas.ipynb  03_selectin_and_viewing_data.ipynb  05_manipulating_data.ipynb  basic.ipynb
